<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Register"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/almarai">


    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:text="@string/create_account"
        android:textColor="@color/blue"
        android:textSize="27dp"
        android:fontFamily="@font/almarai"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/ed_user_name"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperText="@string/remarque_name"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="21" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/ed_mail"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="21" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="5dp"
        android:hint="@string/ed_phone_number"
        app:counterEnabled="false"
        app:counterMaxLength="10"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        app:prefixText="+213"
        app:prefixTextColor="@color/blue"
        app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rankInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/ed_rank"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_rank_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="21" />


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/ed_password"
        app:counterEnabled="false"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rankInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="21" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/ed_confirmPassword"
        app:counterEnabled="false"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="21" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="90dp"
        android:background="@color/blue"
        android:text="@string/signUp_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/almarai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputLayout">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/hv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almarai"
        android:text="@string/hv_account"
        android:textColor="@color/blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_btn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginEnd="164dp"
        android:fontFamily="@font/almarai"
        android:onClick="Sign_in"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hv_account" />


</androidx.constraintlayout.widget.ConstraintLayout>
<!--<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:scrollbars="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/almarai"
            android:text="إنشاء حساب "
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="اسم المستخدم "
            android:fontFamily="@font/almarai"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"

            />

        <EditText
            android:id="@+id/ed_user_name"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/ed"
            android:hint="الاسم الكامل "
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="البريد الإلكتروني "
            android:fontFamily="@font/almarai"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/ed_mail"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="  البريد الإلكتروني"
            android:drawableRight="@drawable/ic_baseline_email_24"
            android:padding="10dp"
            android:background="@drawable/ed"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="رقم الهاتف "
            android:fontFamily="@font/almarai"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/ed_phone_number"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/ed"
            android:fontFamily="@font/almarai"
            android:hint="@string/ed_phone_number"
            android:inputType="phone"
            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="الرتبة "
            android:fontFamily="@font/almarai"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/ed_rank"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="الرتبة"
            android:padding="10dp"
            android:fontFamily="@font/almarai"
            android:background="@drawable/ed"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="كلمة السر "
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/ed"
            android:hint="8 من الأحرف والأرقام والرموز"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="تأكيد كلمة السر "
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/ed_confirmPassword"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="تأكيد كلمة السر"
            android:padding="10dp"
            android:layoutDirection="rtl"
            android:inputType="textPassword"
            android:background="@drawable/ed"
            />
        <Button
            android:id="@+id/signUp_btn"
            android:background="@drawable/btn_bg"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:text="إنشاء حساب "

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/almarai"
            />
        <TextView
            android:id="@+id/hv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="هل تملك حسابا ؟"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_margin="2dp"
            android:fontFamily="@font/almarai"
            />
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" تسجيل الدخول "
            android:onClick="Sign_in"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:fontFamily="@font/almarai"
            android:layout_margin="5dp"
            />
    </LinearLayout>

</ScrollView>-->